<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#000000">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#d13328"
        android:textColor="#fff"
        android:padding="3dp"
        android:text="@string/add_words"
        android:id="@+id/buttonAddNewWord"
        android:layout_toLeftOf="@+id/buttonRemoveWords"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"></Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#d13328"
        android:textColor="#fff"
        android:padding="3dp"
        android:text="@string/delete_word"
        android:id="@+id/buttonRemoveWords"
        android:layout_toLeftOf="@+id/buttonViewList"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"></Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#d13328"
        android:textColor="#fff"
        android:padding="3dp"
        android:text="@string/view_list"
        android:id="@+id/buttonViewList"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"></Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="#ffffff"
        android:gravity="center_horizontal"
        android:id="@+id/textviewInsult"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#d13328"
            android:textColor="#fff"
            android:padding="3dp"
            android:text="@string/generate_insult"
            android:id="@+id/buttonGenerateInsult"
            android:layout_marginRight="5dp"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#d13328"
            android:textColor="#fff"
            android:padding="3dp"
            android:text="@string/generate_compliment"
            android:id="@+id/buttonGenerateCompliment"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>


</RelativeLayout>