<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        android:layout_marginBottom="4dp"
        android:id="@+id/cardView"
        android:background="#00ffffff">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/new_text"
                    android:textSize="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerType"
                    android:entries="@array/type_array"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/insult"
                    android:textSize="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/switchCompliment"
                    android:textSize="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/compliment"
                    android:textSize="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/editTextNewWord">

            </EditText>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCancel"
                android:text="@string/cancel"
                android:background="#d13328"
                android:textColor="#fff"
                android:padding="3dp"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSubmit"
                android:text="@string/submit"
                android:background="#d13328"
                android:textColor="#fff"
                android:padding="3dp"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>
        </LinearLayout>





    </androidx.cardview.widget.CardView>







</LinearLayout>